--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,12 @@
     "name": "plugse/ctrl",
     "description": "Launch controllers by registred routes",
     "type": "library",
+    "keywords": ["write","read", "path", "file", "env", "log", "json"],
+    "homepage": "https://github.com/joselio105/controller-launcher",
+    "version": "1.0.0",
     "require": {
-        "plugse/fileandpath": "^1.0"
+        "plugse/fileandpath": "^1.0",
+        "php": ">=7.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6"
@@ -11,8 +15,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Plugse\\Ctrl\\": "src/",
-            "Plugse\\Test\\": "test/"
+            "Plugse\\Ctrl\\": "src/" 
         }
     },
     "authors": [
@@ -20,5 +23,10 @@
             "name": "José Hélio",
             "email": "jose.helio@gmail.com"
         }
-    ]
+    ],
+    "scripts": {
+        "post-install-cmd": [
+            "./vendor/bin/phpunit tests -v --testdox"
+        ]
+    }
 }
